--- a/src/html/header/index.html
+++ b/src/html/header/index.html
@@ -8,37 +8,35 @@
         </a>
       </div>
 
-      <nav>
-        <ul class="header__nav">
-          <li><a href="">Главная</a></li>
-          <li><a href="">Наши услуги</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-      </nav>
-
-      <div>
-        <ul class="list-reset">
-          <li></li>
-        </ul>
+      <div class="header__main-nav">
+        <a href="">Главная</a>&emsp;/&emsp;<a href="">Наши услуги</a>&emsp;/&emsp;<a href="">Контакты</a>
       </div>
 
-      <div class="contacts">
-        <a class="contacts__icon-phone is-background"
-           href="tel:+">
-          <svg width="24"
-               height="24"
-               aria-hidden="true">
-            <use xlink:href="img/sprite.svg#icon-phone"></use>
-          </svg>
-        </a>
-        <div>
-          <a class="contacts__phone"
-             href="tel:+">8 (800) 700 77 77</a>
-          <div class="contacts__time-work">c 8:00 до 22:00</div>
+      <div class="header__left">
+        <div class="language-switcher">
+          <button class="language-switcher__btn active">RU</button>
+          <button class="language-switcher__btn">EN</button>
+          <button class="language-switcher__btn">AM</button>
+        </div>
+
+        <div class="contacts">
+          <a class="contacts__icon-phone is-background"
+             href="tel:+">
+            <svg width="24"
+                 height="24"
+                 aria-hidden="true">
+              <use xlink:href="img/sprite.svg#icon-phone"></use>
+            </svg>
+          </a>
+          <div>
+            <a class="contacts__phone"
+               href="tel:+">8 (800) 700 77 77</a>
+            <div class="contacts__time-work">c 8:00 до 22:00</div>
+          </div>
         </div>
       </div>
 
-      <button class="">Бургер</button>
+
     </div>
   </div>
 </header>
