--- a/src/html/footer/index.html
+++ b/src/html/footer/index.html
@@ -1,4 +1,203 @@
-<footer class="site__footer">
+<footer class="site__footer footer">
+  <div class="container">
+    <h2 class="title title--blue">контакты</h2>
+    <div class="footer__map">
+      <img src="/img/img-map.png"
+           alt="">
+
+      <div class="header header--border-bottoms">
+        <div class="header__cont">
+          <div>
+            <a href="/">
+              <img src="/img/logo.png"
+                   alt="Logo">
+            </a>
+          </div>
+
+          <div class="main-nav">
+            <a href="">Главная</a>&emsp;/&emsp;<a href="">Наши услуги</a>&emsp;/&emsp;<a href="">Контакты</a>
+          </div>
+
+          <div class="header__right">
+            <div class="social d-sm-none">
+              <span>Мы социально- активны:</span>
+              <ul class="social__list">
+                <li>
+                  <a class="is-background"
+                     href="">
+                    <svg width="19"
+                         height="19"
+                         aria-hidden="true">
+                      <use xlink:href="img/sprite.svg#icon-telegram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="is-background"
+                     href="">
+                    <svg width="24"
+                         height="24"
+                         aria-hidden="true">
+                      <use xlink:href="img/sprite.svg#icon-vk"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="is-background"
+                     href="">
+                    <svg width="24"
+                         height="24"
+                         aria-hidden="true">
+                      <use xlink:href="img/sprite.svg#icon-youtube"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="is-background"
+                     href="">
+                    <svg width="24"
+                         height="24"
+                         aria-hidden="true">
+                      <use xlink:href="img/sprite.svg#icon-whatsapp"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="contacts">
+              <a class="contacts__icon-phone is-background"
+                 href="tel:+">
+                <svg width="24"
+                     height="24"
+                     aria-hidden="true">
+                  <use xlink:href="img/sprite.svg#icon-phone"></use>
+                </svg>
+              </a>
+              <div>
+                <a class="contacts__phone"
+                   href="tel:+">8 (800) 700 77 77</a>
+                <div class="contacts__time-work">c 8:00 до 22:00</div>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+
+      <div class="footer-middle">
+        <ul class="footer-middle__list">
+          <li class="footer-middle__item">
+            <span class="footer-middle__name">Реквизиты:</span>
+            <span class="footer-middle__value">ИНН: 5032309922, ОГРН: 1195081051846</span>
+          </li>
+          <li class="footer-middle__item">
+            <span class="footer-middle__name">Адрес:</span>
+            <span class="footer-middle__value">г. Москва, ул. Нагорная, д 19</span>
+          </li>
+        </ul>
+
+        <div class="footer-middle__form">
+          <form id="email-form"
+                data-validate
+                novalidate="novalidate">
+            <input class="form-input"
+                   type="email"
+                   name="Почтовый адрес"
+                   placeholder="E-mail"
+                   required
+                   data-validate="email">
+            <button class="btn btn--secondary"
+                    type="submit">
+              <svg width="8"
+                   height="8"
+                   aria-hidden="true">
+                <use xlink:href="img/sprite.svg#icon-small-aroow-v2"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+
+        <div class="social d-lg-none">
+          <span>Мы социально- активны:</span>
+          <ul class="social__list">
+            <li>
+              <a class="is-background"
+                 href="">
+                <svg width="19"
+                     height="19"
+                     aria-hidden="true">
+                  <use xlink:href="img/sprite.svg#icon-telegram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="is-background"
+                 href="">
+                <svg width="24"
+                     height="24"
+                     aria-hidden="true">
+                  <use xlink:href="img/sprite.svg#icon-vk"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="is-background"
+                 href="">
+                <svg width="24"
+                     height="24"
+                     aria-hidden="true">
+                  <use xlink:href="img/sprite.svg#icon-youtube"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="is-background"
+                 href="">
+                <svg width="24"
+                     height="24"
+                     aria-hidden="true">
+                  <use xlink:href="img/sprite.svg#icon-whatsapp"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-middle__contact">
+          <div>
+            <span class="txt-sm txt-sm--gradient">Есть вопросы или предложения?</span>
+            <button class="btn">Напишите нам</button>
+          </div>
+          <a href="#"
+             class="btn btn--secondary">
+            <svg width="8"
+                 height="8"
+                 aria-hidden="true">
+              <use xlink:href="img/sprite.svg#icon-small-aroow-v2"></use>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <div class="container">
+      <div class="footer-bottom__cont">
+        <p class="footer-bottom__links">
+          Отправляя сообщение в мессенджеры, форму заявки, я подтверждаю, что даю конкретное, предметное, информированное, сознательное и однозначное <a href="">Согласие на обработку моих персональных данных</a>, и полностью ознакомился и согласен с <a href="">Политикой обработки персональных данных</a>
+        </p>
+        <div class="footer-bottom__logo">
+          <a href="">
+            <img src="/img/logo-footer.png"
+                 alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
 @include('../common/scroll-top.html')
 @include('../modal/index.html')
