--- a/src/html/header/index.html
+++ b/src/html/header/index.html
@@ -8,11 +8,11 @@
         </a>
       </div>
 
-      <div class="header__main-nav">
+      <div class="main-nav">
         <a href="">Главная</a>&emsp;/&emsp;<a href="">Наши услуги</a>&emsp;/&emsp;<a href="">Контакты</a>
       </div>
 
-      <div class="header__left">
+      <div class="header__right">
         <div class="language-switcher">
           <button class="language-switcher__btn active">RU</button>
           <button class="language-switcher__btn">EN</button>
