--- a/src/html/pages/main/index.html
+++ b/src/html/pages/main/index.html
@@ -1,3 +1,6 @@
 @include('hero.html')
 @include('benefits.html')
 @include('services.html')
+@include('how-we-work.html')
+@include('partners.html')
+@include('about.html')
