--- a/src/html/pages/main/services.html
+++ b/src/html/pages/main/services.html
@@ -8,51 +8,48 @@
                alt="">
         </div>
         <div class="service__bottom">
-          <h3 class="service__title">Покупка квартиры в новостройке</h3>
-          <a class="service__link"
-             href="#">
+          <h3 class="service__title"><a href="#">Покупка квартиры в новостройке</a></h3>
+          <button class="btn service__btn">
             <svg width="10"
                  height="8"
                  aria-hidden="true">
               <use xlink:href="img/sprite.svg#icon-small-arrow"></use>
             </svg>
-          </a>
+          </button>
         </div>
       </li>
 
       <li class="service">
         <div class="service__img">
-          <img src="/img/img-service-2.png"
+          <img src="/img/img-service-1.png"
                alt="">
         </div>
         <div class="service__bottom">
-          <h3 class="service__title">Покупка вторичного жилья</h3>
-          <a class="service__link"
-             href="#">
+          <h3 class="service__title"><a href="#">Покупка вторичного жилья</a></h3>
+          <button class="btn service__btn">
             <svg width="10"
                  height="8"
                  aria-hidden="true">
               <use xlink:href="img/sprite.svg#icon-small-arrow"></use>
             </svg>
-          </a>
+          </button>
         </div>
       </li>
 
       <li class="service">
         <div class="service__img">
-          <img src="/img/img-service-3.png"
+          <img src="/img/img-service-1.png"
                alt="">
         </div>
         <div class="service__bottom">
-          <h3 class="service__title">Аренда квартиры</h3>
-          <a class="service__link"
-             href="#">
+          <h3 class="service__title"><a href="#">Аренда квартиры</a></h3>
+          <button class="btn service__btn">
             <svg width="10"
                  height="8"
                  aria-hidden="true">
               <use xlink:href="img/sprite.svg#icon-small-arrow"></use>
             </svg>
-          </a>
+          </button>
         </div>
       </li>
     </ul>
