Главная готова, начал верстку внутренних страниц

--- a/src/html/footer/index.html
+++ b/src/html/footer/index.html
@@ -7,14 +7,14 @@
 
       <div class="header header--border-bottoms">
         <div class="header__cont">
-          <div>
+          <div class="logo">
             <a href="/">
-              <img src="/img/logo.png"
+              <img src="/img/logo.svg"
                    alt="Logo">
             </a>
           </div>
 
-          <div class="main-nav">
+          <div class="main-nav d-none d-xl-block">
             <a href="">Главная</a>&emsp;/&emsp;<a href="">Наши услуги</a>&emsp;/&emsp;<a href="">Контакты</a>
           </div>
 
@@ -171,7 +171,7 @@
             <button class="btn">Напишите нам</button>
           </div>
           <a href="#"
-             class="btn btn--secondary">
+             class="btn btn--secondary d-sm-none">
             <svg width="8"
                  height="8"
                  aria-hidden="true">
@@ -186,15 +186,15 @@
   <div class="footer-bottom">
     <div class="container">
       <div class="footer-bottom__cont">
-        <p class="footer-bottom__links">
-          Отправляя сообщение в мессенджеры, форму заявки, я подтверждаю, что даю конкретное, предметное, информированное, сознательное и однозначное <a href="">Согласие на обработку моих персональных данных</a>, и полностью ознакомился и согласен с <a href="">Политикой обработки персональных данных</a>
-        </p>
         <div class="footer-bottom__logo">
           <a href="">
             <img src="/img/logo-footer.png"
                  alt="">
           </a>
         </div>
+        <p class="footer-bottom__links">
+          Отправляя сообщение в мессенджеры, форму заявки, я подтверждаю, что даю конкретное, предметное, информированное, сознательное и однозначное <a href="">Согласие на обработку моих персональных данных</a>, и полностью ознакомился и согласен с <a href="">Политикой обработки персональных данных</a>
+        </p>
       </div>
     </div>
   </div>
