--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
         <li>
           <a href="page-main.html">Страница "Главная"</a>
         </li>
+        <li>
+          <a href="page-apartment-rent.html">Страница "Аренда квартиры"</a>
+        </li>
       </ol>
     </div>
   </main>
