--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         <li>
           <a href="page-main.html">Страница "Главная"</a>
         </li>
+        <li>
+          <a href="page-apartment-rent.html">Страница "Аренда квартиры"</a>
+        </li>
+        <li>
+          <a href="page-secondary-housing.html">Страница "Вторичное жилье"</a>
+        </li>
+        <li>
+          <a href="page-new-buildings.html">Страница "Новостройки"</a>
+        </li>
       </ol>
     </div>
   </main>
