--- a/page-main.html
+++ b/page-main.html
@@ -151,7 +151,7 @@
           <ul class="services__list">
             <li class="service">
               <div class="service__img">
-                <img src="/img/img-service-1.png" alt="">
+                <img src="./img/img-service-1.png" alt="">
               </div>
               <div class="service__bottom">
                 <h3 class="service__title"><a href="#">Покупка квартиры в новостройке</a></h3>
@@ -165,7 +165,7 @@
 
             <li class="service">
               <div class="service__img">
-                <img src="/img/img-service-1.png" alt="">
+                <img src="./img/img-service-1.png" alt="">
               </div>
               <div class="service__bottom">
                 <h3 class="service__title"><a href="#">Покупка вторичного жилья</a></h3>
@@ -179,7 +179,7 @@
 
             <li class="service">
               <div class="service__img">
-                <img src="/img/img-service-1.png" alt="">
+                <img src="./img/img-service-1.png" alt="">
               </div>
               <div class="service__bottom">
                 <h3 class="service__title"><a href="#">Аренда квартиры</a></h3>
