--- a/index.html
+++ b/index.html
@@ -3,15 +3,32 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="preload" href="fonts/opensans-regular.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="stylesheet" href="style/vendor-bundle.css">
-  <link rel="stylesheet" href="style/main.css">
+<meta name="viewport"
+      content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible"
+      content="ie=edge">
+<link rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="img/favicons/favicon-16x16.png">
+<link rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="img/favicons/favicon-32x32.png">
+<link rel="apple-touch-icon"
+      sizes="180x180"
+      href="img/favicons/apple-touch-icon.png">
+<link rel="manifest"
+      href="site.webmanifest">
+<link rel="preload"
+      href="fonts/opensans-regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin>
+<link rel="stylesheet"
+      href="style/vendor-bundle.css">
+<link rel="stylesheet"
+      href="style/main.css">
   <title>Список страниц</title>
 </head>
 
@@ -20,7 +37,9 @@
     <div class="container">
       <h1>Sitemap</h1>
       <p>
-        <a href="#" target="_blank" rel="nofollow noreferer noopener">Макет</a>
+        <a href="#"
+           target="_blank"
+           rel="nofollow noreferer noopener">Макет</a>
       </p>
       <ol>
         <li>
