--- a/footer-v2.html
+++ b/footer-v2.html
@@ -7,13 +7,13 @@
 			      <div class="header header--border-bottoms">
 			        <div class="header__cont">
 			          <div class="logo">
-			            <a href="/page-main.html">
+			            <a href="./page-main.html">
 			              <img src="./img/logo.svg" alt="Logo">
 			            </a>
 			          </div>
 
 			          <div class="main-nav d-none d-xl-block">
-			            <a href="/page-main.html">Главная</a>&emsp;/&emsp;<a href="/page-main.html#services">Наши услуги</a>&emsp;/&emsp;<a href="#contacts">Контакты</a>
+			            <a href="./page-main.html">Главная</a>&emsp;/&emsp;<a href="./page-main.html#services">Наши услуги</a>&emsp;/&emsp;<a href="#contacts">Контакты</a>
 			          </div>
 
 			          <div class="header__right">
@@ -144,7 +144,7 @@
 			    <div class="container">
 			      <div class="footer-bottom__cont">
 			        <div class="footer-bottom__logo">
-			          <a href="/page-main.html">
+			          <a href="./page-main.html">
 			            <img src="./img/logo-footer.png" alt="">
 			          </a>
 			        </div>
