--- a/page-apartment-rent.html
+++ b/page-apartment-rent.html
@@ -22,13 +22,13 @@
       <div class="container">
         <div class="header__cont">
           <div class="logo">
-            <a href="/page-main.html">
+            <a href="./page-main.html">
               <img src="./img/logo.svg" alt="Logo">
             </a>
           </div>
 
           <div class="main-nav d-sm-none">
-            <a href="/page-main.html">Главная</a>&emsp;/&emsp;<a href="/page-main.html#services">Наши услуги</a>&emsp;/&emsp;<a href="#contacts">Контакты</a>
+            <a href="./page-main.html">Главная</a>&emsp;/&emsp;<a href="./page-main.html#services">Наши услуги</a>&emsp;/&emsp;<a href="#contacts">Контакты</a>
           </div>
 
           <div class="header__right">
@@ -81,9 +81,9 @@
 
             <nav class="header-modal__nav">
               <ul>
-                <li><a href="/page-new-buildings.html">Новостройки</a></li>
-                <li><a href="/page-secondary-housing.html">Вторичное жилье</a></li>
-                <li><a href="/page-apartment-rent.html">Аренда квартиры</a></li>
+                <li><a href="./page-new-buildings.html">Новостройки</a></li>
+                <li><a href="./page-secondary-housing.html">Вторичное жилье</a></li>
+                <li><a href="./page-apartment-rent.html">Аренда квартиры</a></li>
               </ul>
             </nav>
 
@@ -570,13 +570,13 @@
           <div class="header header--border-bottoms">
             <div class="header__cont">
               <div class="logo">
-                <a href="/page-main.html">
+                <a href="./page-main.html">
                   <img src="./img/logo.svg" alt="Logo">
                 </a>
               </div>
 
               <div class="main-nav d-none d-xl-block">
-                <a href="/page-main.html">Главная</a>&emsp;/&emsp;<a href="/page-main.html#services">Наши услуги</a>&emsp;/&emsp;<a href="#contacts">Контакты</a>
+                <a href="./page-main.html">Главная</a>&emsp;/&emsp;<a href="./page-main.html#services">Наши услуги</a>&emsp;/&emsp;<a href="#contacts">Контакты</a>
               </div>
 
               <div class="header__right">
@@ -707,7 +707,7 @@
         <div class="container">
           <div class="footer-bottom__cont">
             <div class="footer-bottom__logo">
-              <a href="/page-main.html">
+              <a href="./page-main.html">
                 <img src="./img/logo-footer.png" alt="">
               </a>
             </div>
