--- a/page-main.html
+++ b/page-main.html
@@ -22,13 +22,13 @@
       <div class="container">
         <div class="header__cont">
           <div class="logo">
-            <a href="/page-main.html">
+            <a href="./page-main.html">
               <img src="./img/logo.svg" alt="Logo">
             </a>
           </div>
 
           <div class="main-nav d-sm-none">
-            <a href="/page-main.html">Главная</a>&emsp;/&emsp;<a href="/page-main.html#services">Наши услуги</a>&emsp;/&emsp;<a href="#contacts">Контакты</a>
+            <a href="./page-main.html">Главная</a>&emsp;/&emsp;<a href="./page-main.html#services">Наши услуги</a>&emsp;/&emsp;<a href="#contacts">Контакты</a>
           </div>
 
           <div class="header__right">
@@ -81,9 +81,9 @@
 
             <nav class="header-modal__nav">
               <ul>
-                <li><a href="/page-new-buildings.html">Новостройки</a></li>
-                <li><a href="/page-secondary-housing.html">Вторичное жилье</a></li>
-                <li><a href="/page-apartment-rent.html">Аренда квартиры</a></li>
+                <li><a href="./page-new-buildings.html">Новостройки</a></li>
+                <li><a href="./page-secondary-housing.html">Вторичное жилье</a></li>
+                <li><a href="./page-apartment-rent.html">Аренда квартиры</a></li>
               </ul>
             </nav>
 
@@ -154,7 +154,7 @@
                 <img src="./img/img-service-1.png" alt="">
               </div>
               <div class="service__bottom">
-                <h3 class="service__title"><a href="/page-new-buildings.html">Покупка квартиры в новостройке</a></h3>
+                <h3 class="service__title"><a href="./page-new-buildings.html">Покупка квартиры в новостройке</a></h3>
                 <button class="btn service__btn">
                   <svg width="10" height="8" aria-hidden="true">
                     <use xlink:href="img/sprite.svg#icon-small-arrow"></use>
@@ -168,7 +168,7 @@
                 <img src="./img/img-service-1.png" alt="">
               </div>
               <div class="service__bottom">
-                <h3 class="service__title"><a href="/page-secondary-housing.html">Покупка вторичного жилья</a></h3>
+                <h3 class="service__title"><a href="./page-secondary-housing.html">Покупка вторичного жилья</a></h3>
                 <button class="btn service__btn">
                   <svg width="10" height="8" aria-hidden="true">
                     <use xlink:href="img/sprite.svg#icon-small-arrow"></use>
@@ -182,7 +182,7 @@
                 <img src="./img/img-service-1.png" alt="">
               </div>
               <div class="service__bottom">
-                <h3 class="service__title"><a href="/page-apartment-rent.html">Аренда квартиры</a></h3>
+                <h3 class="service__title"><a href="./page-apartment-rent.html">Аренда квартиры</a></h3>
                 <button class="btn service__btn">
                   <svg width="10" height="8" aria-hidden="true">
                     <use xlink:href="img/sprite.svg#icon-small-arrow"></use>
@@ -306,13 +306,13 @@
           <div class="header header--border-bottoms">
             <div class="header__cont">
               <div class="logo">
-                <a href="/page-main.html">
+                <a href="./page-main.html">
                   <img src="/img/logo.svg" alt="Logo">
                 </a>
               </div>
 
               <div class="main-nav d-none d-xl-block">
-                <a href="/page-main.html">Главная</a>&emsp;/&emsp;<a href="/page-main.html#services">Наши услуги</a>&emsp;/&emsp;<a href="#contacts">Контакты</a>
+                <a href="./page-main.html">Главная</a>&emsp;/&emsp;<a href="./page-main.html#services">Наши услуги</a>&emsp;/&emsp;<a href="#contacts">Контакты</a>
               </div>
 
               <div class="header__right">
@@ -443,7 +443,7 @@
         <div class="container">
           <div class="footer-bottom__cont">
             <div class="footer-bottom__logo">
-              <a href="/page-main.html">
+              <a href="./page-main.html">
                 <img src="./img/logo-footer.png" alt="">
               </a>
             </div>
