--- a/page-template.html
+++ b/page-template.html
@@ -131,7 +131,7 @@
             <div class="header__cont">
               <div class="logo">
                 <a href="./page-main.html">
-                  <img src="/img/logo.svg" alt="Logo">
+                  <img src="./img/logo.svg" alt="Logo">
                 </a>
               </div>
 
