--- a/page-secondary-housing.html
+++ b/page-secondary-housing.html
@@ -854,9 +854,9 @@
             <div class="footer-middle__contact">
               <div>
                 <span class="txt-sm txt-sm--gradient">Есть вопросы или предложения?</span>
-                <button class="btn">Напишите нам</button>
+                <button class="btn" data-hystmodal="#form-request-modal">Напишите нам</button>
               </div>
-              <a href="#" class="btn btn--secondary d-sm-none">
+              <a href="#" class="btn btn--secondary d-sm-none" data-hystmodal="#form-request-modal">
                 <svg width="8" height="8" aria-hidden="true">
                   <use xlink:href="img/sprite.svg#icon-small-aroow-v2"></use>
                 </svg>
@@ -908,8 +908,12 @@
             <div class="modal__title title">оставьте заявку</div>
             <div class="modal__text">Оставьте заявку и наш менеджер свяжется с вами в течение 10 минут</div>
             <form id="form-request" data-validate novalidate="novalidate">
-              <input class="form-input" type="name" placeholder="Ваше имя" name="Имя" required data-validate="name">
-              <input class="form-input" type="tel" name="Контактный телефон" required placeholder="7 (___) ___-__-__" data-validate="phone">
+              <div class="form-field">
+                <input class="form-input" type="name" placeholder="Ваше имя" name="Имя" required data-validate="name">
+              </div>
+              <div class="form-field">
+                <input class="form-input" type="tel" name="Контактный телефон" required placeholder="7 (___) ___-__-__" data-validate="phone">
+              </div>
               <button class="btn btn--primary" type="submit">Получить консультацию</button>
             </form>
 
