--- a/src/html/common/confirm-text.html
+++ b/src/html/common/confirm-text.html
@@ -1,5 +1,5 @@
-Я согласен(на) с <a href="#"
+Нажимая на кнопку вы соглашаетесь с <a href="#"
    target="_blank"
-   rel="nofollow noreferer noopener">Политикой Конфиденциальности</a> и <a href="#"
+   rel="nofollow noreferer noopener">политикой конфиденциальности</a> и даете <a href="#"
    target="_blank"
-   rel="nofollow noreferer noopener">Соглашением об обработке персональных данных</a>
+   rel="nofollow noreferer noopener">согласие на обработку персональных данных</a>
