--- a/src/html/footer/index-v2.html
+++ b/src/html/footer/index-v2.html
@@ -1,7 +1,6 @@
 <footer class="site__footer footer"
         id="contacts">
   <div class="container">
-    <h2 class="title title--blue">контакты</h2>
     <div class="footer__map">
       <img src="./img/img-map.png"
            alt="">
@@ -173,7 +172,8 @@
                     data-hystmodal="#form-request-modal">Напишите нам</button>
           </div>
           <a href="#"
-             class="btn btn--secondary d-sm-none" data-hystmodal="#form-request-modal">
+             class="btn btn--secondary d-sm-none"
+             data-hystmodal="#form-request-modal">
             <svg width="8"
                  height="8"
                  aria-hidden="true">
