--- a/src/html/header/index.html
+++ b/src/html/header/index.html
@@ -2,14 +2,14 @@
   <div class="container">
     <div class="header__cont">
       <div class="logo">
-        <a href="/">
-          <img src="/img/logo.svg"
+        <a href="./page-main.html">
+          <img src="./img/logo.svg"
                alt="Logo">
         </a>
       </div>
 
       <div class="main-nav d-sm-none">
-        <a href="">Главная</a>&emsp;/&emsp;<a href="">Наши услуги</a>&emsp;/&emsp;<a href="">Контакты</a>
+        <a href="./page-main.html">Главная</a>&emsp;/&emsp;<a href="./page-main.html#services">Наши услуги</a>&emsp;/&emsp;<a href="#contacts">Контакты</a>
       </div>
 
       <div class="header__right">
@@ -37,16 +37,15 @@
           </div>
         </div>
 
-        <div class="language-select d-lg-none">
-          <span class="language-select__current">RU</span>
-          <span class="language-select__arrow">&#9662;</span>
-          <select class="language-select__dropdown">
+        <div class="select d-lg-none">
+          <span class="select__current">RU</span>
+          <span class="select__arrow">&#9662;</span>
+          <select class="select__dropdown">
             <option value="ru"
                     selected>RU</option>
             <option value="en">EN</option>
             <option value="fr">FR</option>
           </select>
-
         </div>
 
         <button class="just-burger d-lg-none"
