--- a/src/html/header/modal.html
+++ b/src/html/header/modal.html
@@ -6,9 +6,9 @@
 
       <nav class="header-modal__nav">
         <ul>
-          <li><a href="">Новостройки</a></li>
-          <li><a href="">Вторичное жилье</a></li>
-          <li><a href="">Аренда квартиры</a></li>
+          <li><a href="./page-new-buildings.html">Новостройки</a></li>
+          <li><a href="./page-secondary-housing.html">Вторичное жилье</a></li>
+          <li><a href="./page-apartment-rent.html">Аренда квартиры</a></li>
         </ul>
       </nav>
 
