--- a/src/html/modal/index.html
+++ b/src/html/modal/index.html
@@ -1,1 +1,2 @@
 @include('template.html', {id: 'send-ok-modal', template: 'send-ok'})
+@include('template.html', {id: 'form-request-modal', template: 'form-request'})
