--- a/src/html/pages/apartment-rent/filter.html
+++ b/src/html/pages/apartment-rent/filter.html
@@ -1,3 +1,160 @@
-<div class="filter">
-  <div class="container"></div>
-</div>
+<form class="filter">
+  <div class="container">
+    <div class="filter__cont">
+      <div class="filter__item d-sm-none">
+
+        <div class="filter__title">
+          Вид недвижимости
+        </div>
+
+        <ul class="filter__list">
+
+          <li>
+            <label class="filter__checkbox-btn">
+              <input type="checkbox">
+              <span>жилое</span>
+            </label>
+
+          </li>
+
+          <li>
+            <label class="filter__checkbox-btn">
+              <input type="checkbox">
+              <span>коммерция</span>
+            </label>
+          </li>
+
+        </ul>
+      </div>
+
+      <div class="filter__item d-sm-none">
+
+        <div class="filter__title">
+          Срок аренды
+        </div>
+
+        <ul class="filter__list">
+
+          <li>
+            <label class="filter__checkbox-btn">
+              <input type="checkbox">
+              <span>посуточно</span>
+            </label>
+
+          </li>
+
+          <li>
+            <label class="filter__checkbox-btn">
+              <input type="checkbox">
+              <span>надолго</span>
+            </label>
+          </li>
+
+        </ul>
+
+      </div>
+
+      <div class="filter__grid d-lg-none">
+
+        <div class="filter__item">
+          <div class="filter__title">
+            Вид недвижимости
+          </div>
+          <ul class="filter__list">
+
+            <li>
+              <div class="select select--filter">
+                <span class="select__current">жилое</span>
+                <span class="select__arrow">&#9662;</span>
+                <select class="select__dropdown">
+                  <option value="жилое"
+                          selected>жилое</option>
+                  <option value="коммерция">коммерция</option>
+                </select>
+              </div>
+            </li>
+
+          </ul>
+        </div>
+
+        <div class="filter__item d-lg-none">
+          <div class="filter__title">
+            Срок аренды
+          </div>
+          <ul class="filter__list">
+
+            <li>
+              <div class="select select--filter">
+                <span class="select__current">посуточно</span>
+                <span class="select__arrow">&#9662;</span>
+                <select class="select__dropdown">
+                  <option value="посуточно"
+                          selected>посуточно</option>
+                  <option value="надолго">надолго</option>
+                </select>
+              </div>
+            </li>
+
+          </ul>
+        </div>
+
+      </div>
+
+      <div class="filter__item">
+        <div class="filter__title">
+          Количество комнат
+        </div>
+        <ul class="filter__list">
+          <li>
+            <label class="filter__checkbox-btn filter__checkbox-btn--size">
+              <input type="checkbox">
+              <span>1</span>
+            </label>
+
+          </li>
+          <li>
+            <label class="filter__checkbox-btn filter__checkbox-btn--size">
+              <input type="checkbox">
+              <span>2</span>
+            </label>
+          </li>
+
+          <li>
+            <label class="filter__checkbox-btn filter__checkbox-btn--size">
+              <input type="checkbox">
+              <span>3</span>
+            </label>
+          </li>
+
+          <li>
+            <label class="filter__checkbox-btn filter__checkbox-btn--size">
+              <input type="checkbox">
+              <span>4</span>
+            </label>
+          </li>
+        </ul>
+      </div>
+
+      <div class="filter__item">
+        <div class="filter__title">
+          Правила проживания
+        </div>
+        <ul class="filter__list">
+          <li>
+            <label class="filter__checkbox-btn">
+              <input type="checkbox">
+              <span>дети</span>
+            </label>
+          </li>
+
+          <li>
+            <label class="filter__checkbox-btn">
+              <input type="checkbox">
+              <span>животные</span>
+            </label>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</form>
