--- a/src/html/pages/main/hero.html
+++ b/src/html/pages/main/hero.html
@@ -4,7 +4,8 @@
       <h1 class="hero__subtitle">Более 10 лет на рынке недвижимости</h1>
       <div class="title">Надежный партнер</div>
       <p class="hero__descr">Поможем купить квартиру по вашим параметрам в короткие сроки с гарантией</p>
-      <button class="btn btn--primary">Получить консультацию</button>
+      <button class="btn btn--primary"
+              data-hystmodal="#form-request-modal">Получить консультацию</button>
     </div>
   </div>
 </section>
