--- a/src/html/pages/main/services.html
+++ b/src/html/pages/main/services.html
@@ -1,14 +1,15 @@
-<section class="services">
+<section class="services"
+         id="services">
   <div class="container">
     <h2 class="title">наши услуги</h2>
     <ul class="services__list">
       <li class="service">
         <div class="service__img">
-          <img src="/img/img-service-1.png"
+          <img src="./img/img-service-1.png"
                alt="">
         </div>
         <div class="service__bottom">
-          <h3 class="service__title"><a href="#">Покупка квартиры в новостройке</a></h3>
+          <h3 class="service__title"><a href="./page-new-buildings.html">Покупка квартиры в новостройке</a></h3>
           <button class="btn service__btn">
             <svg width="10"
                  height="8"
@@ -21,11 +22,11 @@
 
       <li class="service">
         <div class="service__img">
-          <img src="/img/img-service-1.png"
+          <img src="./img/img-service-1.png"
                alt="">
         </div>
         <div class="service__bottom">
-          <h3 class="service__title"><a href="#">Покупка вторичного жилья</a></h3>
+          <h3 class="service__title"><a href="./page-secondary-housing.html">Покупка вторичного жилья</a></h3>
           <button class="btn service__btn">
             <svg width="10"
                  height="8"
@@ -38,11 +39,11 @@
 
       <li class="service">
         <div class="service__img">
-          <img src="/img/img-service-1.png"
+          <img src="./img/img-service-1.png"
                alt="">
         </div>
         <div class="service__bottom">
-          <h3 class="service__title"><a href="#">Аренда квартиры</a></h3>
+          <h3 class="service__title"><a href="./page-apartment-rent.html">Аренда квартиры</a></h3>
           <button class="btn service__btn">
             <svg width="10"
                  height="8"
