--- a/src/html/pages/secondary-housing/page.html
+++ b/src/html/pages/secondary-housing/page.html
@@ -1,7 +1,7 @@
 <section class="page">
   <div class="container">
     <div class="page__top">
-      <h1 class="title title--sm-blue">аренда квартиры</h1>
+      <h1 class="title title--sm-blue">Вторичное жилье</h1>
       <p class="page__descr">Мы подберем вам квартиру в кратчайшие сроки по вашему запросу, учтем пожелание по расположению, ремонту, оснащенности</p>
       <button class="btn btn--primary"
               data-hystmodal="#form-request-modal">Получить консультацию</button>
