--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,12 @@
         <li>
           <a href="page-apartment-rent.html">Страница "Аренда квартиры"</a>
         </li>
+        <li>
+          <a href="page-secondary-housing.html">Страница "Вторичное жилье"</a>
+        </li>
+        <li>
+          <a href="page-new-buildings.html">Страница "Новостройки"</a>
+        </li>
       </ol>
     </div>
   </main>
