--- a/src/page-apartment-rent.html
+++ b/src/page-apartment-rent.html
@@ -2,4 +2,4 @@
 title: 'Аренда квартиры',
 })
 @include('html/pages/apartment-rent/index.html')
-@include('footer.html')
+@include('footer-v2.html')
