--- a/src/html/pages/main/partners.html
+++ b/src/html/pages/main/partners.html
@@ -7,23 +7,23 @@
         <div class="swiper-wrapper">
 
           <div class="swiper-slide">
-            <img src="/img/img-partners-1.png"
+            <img src="./img/img-partners-1.png"
                  alt="">
           </div>
           <div class="swiper-slide">
-            <img src="/img/img-partners-2.png"
+            <img src="./img/img-partners-2.png"
                  alt="">
           </div>
           <div class="swiper-slide">
-            <img src="/img/img-partners-3.png"
+            <img src="./img/img-partners-3.png"
                  alt="">
           </div>
           <div class="swiper-slide">
-            <img src="/img/img-partners-4.png"
+            <img src="./img/img-partners-4.png"
                  alt="">
           </div>
           <div class="swiper-slide">
-            <img src="/img/img-partners-5.png"
+            <img src="./img/img-partners-5.png"
                  alt="">
           </div>
 
